[gi] Register GType for non-GType enums and flags at runtime.

Note: rebuild of gobject-introspection is required for new tests.

Previously non-GType enums used a separate type implemented in
Python, and non-GType flags had no implementation at all. This
removes the separate type for enums, and registers a new GType at
runtime if there isn't one.

This allows non-GType enums and flags to use the same Python type
as GType enums and flags. This removes duplication of code, and
make both kinds behave identically.

https://bugzilla.gnome.org/show_bug.cgi?id=642607